# dgx_clock

./: README.md  sdkconfig
components/dgx/: CMakeLists.txt  Kconfig
components/dgx/include/: dgx_bitmap.h  dgx_bw_screen.h  dgx_draw.h  dgx_interscreen.h  dgx_screen.h  dgx_spi_screen.h
components/dgx/include/fonts/: UbuntuCondensedRegular15.h
components/dgx/src/: bitmap.c  bw_screen.c  draw.c  i2c_screen.c  interscreen.c  spi_screen.c  v_screen.c
components/dgx/src/drivers/: i2c_ssd1306.c  spi_st7735.c
components/dgx/src/fonts/: UbuntuCondensedRegular15.c  fonts.txt
main/: CMakeCache.txt  Kconfig.projbuild  auto_location.c  http_client_request.c  main.c  weather.c
